--- a/whitesource.config
+++ b/whitesource.config
@@ -3,3 +3,4 @@ maven.resolveDependencies=true
 maven.ignoreSourceFiles=true
 maven.runPreStep=true
 maven.ignoreMvnTreeErrors=true
+maven.aggregateModules=true
